# CorrelationFinder

./: .clangd  .gitignore  CMakeLists.txt  README.md  build.sh  regex.txt
docs/: ppr_diagram.excalidraw
docs/doc/: doc.tex  literatura.bib
docs/presentation/: prezentace.tex
results/: log_30-12_2023_18-45-16.txt
src/: avx.cpp  constants.cpp  data_preprocessing.cpp  gpu.cpp  kernel.cl  logger.cpp  main.cpp  svg.cpp
src/include/: avx.hpp  constants.hpp  data_preprocessing.hpp  errors.hpp  gpu.hpp  logger.hpp  svg.hpp  warnings.hpp
